--- a/backend/src/main/resources/application-mysql.yml
+++ b/backend/src/main/resources/application-mysql.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/tododb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/tododb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
     username: ${DB_USERNAME:root}
     password: ${DB_PASSWORD:}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -13,7 +13,7 @@ spring:
       connection-timeout: 20000
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
@@ -22,7 +22,33 @@ spring:
         use_sql_comments: true
     open-in-view: false
   flyway:
-    enabled: false
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
+    validate-on-migrate: true
+
+# JWT Configuration
+jwt:
+  secret: ${JWT_SECRET:my-super-secret-jwt-key-for-todo-app-change-in-production-min-256-bits}
+  expiration-minutes: ${JWT_EXP_MIN:60}
+  refresh-expiration-minutes: ${REFRESH_EXP_MIN:10080}
+
+# Rate Limiting Configuration
+rate-limit:
+  auth:
+    capacity: ${RATE_LIMIT_AUTH_CAPACITY:10}
+    refill-tokens: ${RATE_LIMIT_AUTH_REFILL:10}
+    refill-duration-minutes: ${RATE_LIMIT_AUTH_DURATION:10}
+
+# Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: when-authorized
 
 logging:
   level:
@@ -30,3 +56,5 @@ logging:
     org.springframework.web: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
