--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: todo-app-backend
 
   profiles:
-    active: ${SPRING_PROFILES_ACTIVE:dev}
+    active: ${SPRING_PROFILES_ACTIVE:mysql}
 
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/tododb}
