--- a/backend/src/main/resources/application-mysql.yml
+++ b/backend/src/main/resources/application-mysql.yml
@@ -13,7 +13,7 @@ spring:
       connection-timeout: 20000
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
@@ -22,10 +22,7 @@ spring:
         use_sql_comments: true
     open-in-view: false
   flyway:
-    enabled: true
-    baseline-on-migrate: true
-    locations: classpath:db/migration
-    validate-on-migrate: true
+    enabled: false
 
 # JWT Configuration
 jwt:
