Sửa lỗi todo không hiển thị và cải thiện query ordering
- Thêm Hibernate annotations (@SQLDelete, @Where) cho auto soft delete

- Sửa update service để không thay đổi due_date khi không cần

- Implement smart ordering: IN_PROGRESS -> PENDING -> DONE, sort theo due_date

- Cập nhật Postman collection với base_url và variables mặc định

- Giải quyết vấn đề deleted_at có giá trị timestamp thay vì NULL

--- a/postman/todo-app.postman_collection.json
+++ b/postman/todo-app.postman_collection.json
@@ -117,7 +117,7 @@
 						],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n    \"email\": \"admin@todo.local\",\n    \"password\": \"Admin@123\"\n}"
+							"raw": "{\n    \"email\": \"{{user_email}}\",\n    \"password\": \"{{user_password}}\"\n}"
 						},
 						"url": {
 							"raw": "{{base_url}}/api/auth/login",
@@ -833,7 +833,7 @@
 	"variable": [
 		{
 			"key": "base_url",
-			"value": "http://localhost:8080",
+			"value": "http://localhost:8081",
 			"type": "string"
 		},
 		{
@@ -844,6 +844,16 @@
 		{
 			"key": "refresh_token",
 			"value": "",
+			"type": "string"
+		},
+		{
+			"key": "user_email",
+			"value": "nguoidung@todo.local",
+			"type": "string"
+		},
+		{
+			"key": "user_password",
+			"value": "Pass@123",
 			"type": "string"
 		}
 	]
